--- a/Docker/docker_compose_3_levels.yml
+++ b/Docker/docker_compose_3_levels.yml
@@ -1,20 +1,26 @@
 version: '3.1'
 
 services:
-  layer:
+  layer1:
     image: layer:1.0.0
     ports:
-      - 8080:8080
-      - 50501:50501
+      - 8081:8080
     environment:
-      LAYER_NAME: layer
-      DEST_LAYER: collector:8081
+      LAYER_NAME: layer1
+      DEST_LAYER: layer2:8082
+
+  layer2:
+    image: layer:1.0.0
+    ports:
+      - 8082:8080
+    environment:
+      LAYER_NAME: layer2
+      DEST_LAYER: collector:8083
 
   collector:
     image: collector:1.0.0
     ports:
-      - 8081:8081
-      - 50502:50502
+      - 8083:8081
     environment:
       LAYER_NAME: collector
 
