--- a/K8s/k8s_2_levels.yml
+++ b/K8s/k8s_2_levels.yml
@@ -84,27 +84,6 @@ spec:
       targetPort: 8081
 
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: http-ingress
-spec:
-  defaultBackend:
-    service:
-      name: layer
-      port:
-        number: 80
-  rules:
-    - http:
-        paths:
-          - path: /v1/sample
-            pathType: Prefix
-            backend:
-              service:
-                name: layer
-                port:
-                  number: 80
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -140,6 +119,35 @@ spec:
       port: 9411
       targetPort: 9411
 
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: http-ingress
+spec:
+  defaultBackend:
+    service:
+      name: layer
+      port:
+        number: 80
+  rules:
+    - http:
+        paths:
+          - path: /v1/sample
+            pathType: Prefix
+            backend:
+              service:
+                name: layer
+                port:
+                  number: 80
+          - path: /swagger-ui
+            pathType: Prefix
+            backend:
+              service:
+                name: layer
+                port:
+                  number: 80
 
 ---
 apiVersion: networking.k8s.io/v1
