--- a/LayerApp/pom.xml
+++ b/LayerApp/pom.xml
@@ -14,7 +14,16 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <openapi.ui.version>1.6.6</openapi.ui.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${openapi.ui.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
