--- a/K8s/k8s_3_levels.yml
+++ b/K8s/k8s_3_levels.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: layer1
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: layer1
@@ -46,7 +46,7 @@ metadata:
   labels:
     app: layer2
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: layer2
@@ -88,7 +88,7 @@ metadata:
   labels:
     app: collector
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: collector
@@ -170,14 +170,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /v1/sample
-            pathType: Prefix
-            backend:
-              service:
-                name: layer1
-                port:
-                  number: 80
-          - path: /v1/system
+          - path: /api/v1/sample
             pathType: Prefix
             backend:
               service:
@@ -191,11 +184,6 @@ kind: Ingress
 metadata:
   name: zipkin-ingress
 spec:
-  defaultBackend:
-    service:
-      name: zipkin
-      port:
-        number: 9411
   rules:
     - http:
         paths:
