--- a/.github/workflows/maven_develop.yml
+++ b/.github/workflows/maven_develop.yml
@@ -24,3 +24,27 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+
+    - uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker LAYER
+      with:
+        dockerfile: LayerApp/Dockerfile
+        image: mauxlab/layer
+        tags: v1, latest
+        registry: registry-url.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }} 
+
+#    - uses: mr-smithers-excellent/docker-build-push@v5
+#      name: Build & push Docker COLLECTOR
+#      with:
+#        dockerfile: CollectorApp/Dockerfile
+#        image: mauxlab/collector
+#        tags: v1, latest
+#        registry: registry-url.io
+#        dockerfile: Dockerfile.ci
+#        username: ${{ secrets.DOCKER_USERNAME }}
+#        password: ${{ secrets.DOCKER_PASSWORD }}    
+
