--- a/.github/workflows/maven_develop.yml
+++ b/.github/workflows/maven_develop.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker LAYER
       with:
-        dockerfile: LayerApp/Dockerfile
+        dockerfile: LayerApp/Dockerfile.ci
         image: mauxlab/layer
         tags: v1, latest
         registry: registry-1.docker.io
@@ -39,7 +39,7 @@ jobs:
 #    - uses: mr-smithers-excellent/docker-build-push@v5
 #      name: Build & push Docker COLLECTOR
 #      with:
-#        dockerfile: CollectorApp/Dockerfile
+#        dockerfile: CollectorApp/Dockerfile.ci
 #        image: mauxlab/collector
 #        tags: v1, latest
 #        registry: registry-url.io
